# octopus-sensing-visualizer

./: .gitignore  README.md  build.sh
server/: main.py  pyproject.toml
server/octopus_sensing_visualizer/: __init__.py  config.conf  end_point.py  main.py
server/octopus_sensing_visualizer/prepare_data/: __init__.py  eeg.py  gsr.py  ppg.py
ui/: .eslintrc.js  .prettierrc.yaml  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
ui/src/: chart.ts  index.css  index.html  index.ts  services.ts  types.ts
