[tool.poetry]
name = "octopus-sensing-visualizer"
version = "1.1.1"
description = "Library for visualizing data synchronously recorded from different sensors"
authors = ["Nastaran Saffaryazdi <nsaffar@gmail.com>", "Aidin Gharibnavaz <aidin@aidinhut.com>"]
license = "GPL-3.0-or-later"
homepage = "https://octopus-sensing.nastaran-saffar.me"
repository = "https://github.com/nastaran62/octopus-sensing-visualizer"
keywords = ["sensors", "eeg", "gsr", "visualizer"]
readme = "README.md"
include = ["octopus_sensing_visualizer/ui_build/*"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.2.5"
neurokit = "^0.2.0"
heartpy = "^1.2.7"
pycairo = "^1.20.1"
CherryPy = "^18.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.autopep8]
max_line_length = 100

[tool.poetry.scripts]
octopus-sensing-visualizer = "octopus_sensing_visualizer.main:main"
