[tool.poetry]
name = "octopus-sensing-visualizer"
version = "1.2.0"
description = "Library for visualizing data synchronously recorded from different sensors"
authors = ["Nastaran Saffaryazdi <nsaffar@gmail.com>", "Aidin Gharibnavaz <aidin@aidinhut.com>"]
license = "GPL-3.0-or-later"
homepage = "https://octopus-sensing.nastaran-saffar.me"
repository = "https://github.com/octopus-sensing/octopus-sensing-visualizer"
keywords = ["sensors", "eeg", "gsr", "visualizer"]
readme = "README.md"
include = ["octopus_sensing_visualizer/ui_build/*"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^1.5.3"
neurokit2 = "^0.2.7"
heartpy = "^1.2.7"
pycairo = "^1.25.1"
CherryPy = "^18.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.autopep8]
max_line_length = 100

[tool.poetry.scripts]
octopus-sensing-visualizer = "octopus_sensing_visualizer.main:main"
